# Test_Mindbox

geometry-figures/: README.md  pyproject.toml
geometry-figures/geometry/: __init__.py  base.py  circle.py  triangle.py
geometry-figures/run/: file.py
geometry-figures/tests/: test_circle.py  test_triangle.py
pyspark-products-categories/: README.md  requirements.txt
pyspark-products-categories/src/: product_category.py
pyspark-products-categories/tests/: test_product_category.py
