[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-figures"
version = "0.1.0"
description = "Библиотека для вычисления площадей фигур (круг, треугольник и др.)"
readme = "README.md"
authors = [
  { name="Антипин Дмитрий", email="koopantipin@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []  # сюда идут рабочие зависимости, если появятся

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]
